# zeronote

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  log4rs.yaml  setup_dev.sh
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/models/: schema.rs  task.rs
migrations/2022-10-10-221240_tasks/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  schema.rs
src/database/: connection.rs  models.rs
src/errors/: app_error.rs
src/handlers/: auth.rs  tasks.rs
src/middlewares/: auth.rs  mod.rs  security_headers.rs
src/models/: mod.rs  schema.rs  task.rs
src/services/: auth.rs  tasks.rs
src/utils/: log.rs  ssl_builder.rs
tests/: task_endpoints.rs  tasks_crud_integration.rs
tests/common/: mod.rs
zeronote-api/: .env.template  .gitignore  Cargo.toml  port_forwarding.sh
zeronote-api/src/: errors.rs  lib.rs  log.rs  main.rs
zeronote-api/src/database/: connection.rs  models.rs
zeronote-api/src/extractors/: claims.rs  token.rs
zeronote-api/src/handlers/: auth.rs  tasks.rs
zeronote-api/src/middlewares/: auth.rs  cors.rs  mod.rs  security_headers.rs
zeronote-api/src/services/: auth.rs  tasks.rs
zeronote-api/src/utils/: mod.rs  ssl_builder.rs
zeronote-api/tests/: tasks_crud_integration.rs
zeronote-ui/: Cargo.toml
zeronote-ui/src/: lib.rs  main.rs
