[package]
name = "zeronote"
description = "Lightweight CRUD API with Actix Web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
actix-web = "4.2.1"
dotenv = "0.15.0"

[dev-dependencies]
diesel_migrations = "2.0.0"
serde_json = "1.0.86"
actix-http = "3.2.2"
