[package]
name = "zeronote"
description = "Actix Web REST API with JWT authentication "
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
log4rs = { version = "1.2.0", features = ["console_appender", "file_appender"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
validator = { version = "0.16.0", features = ["derive"] }
actix-web = { version = "4.2.1", features = ["openssl"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtokens-cognito = "0.1.1"
diesel_migrations = "2.0.0"
jsonwebtokens = "1.1.0"
actix-cors = "0.6.4"
actix-http = "3.2.2"
reqwest = "0.11.12"
openssl = "0.10.48"
dotenv = "0.15.0"
oauth2 = "4.2.3"
jwt = "0.16.0"
log = "0.4"

[dev-dependencies]
serde_json = "1.0.86"
base64 = "0.20.0"
sha2 = "0.10.6"
hmac = "0.12.1"
