[package]
name = "common"
description = "Models utilized by both client & server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
actix-web = { version = "4.2.1", features = ["openssl"] }
actix-http = "3.2.2"
reqwest = "0.11.12"
oauth2 = "4.2.3"
