[package]
name = "zeronote-api"
description = "Lightweight CRUD API with Actix Web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }
log4rs = { version = "1.2.0", features = ["console_appender", "file_appender"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
serde = { version = "1.0.145", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
actix-web-httpauth = "0.8.0"
diesel_migrations = "2.0.0"
actix-cors = "0.6.4"
actix-http = "3.2.2"
actix-web = "4.2.1"
jsonwebtoken = "8"
dotenv = "0.15.0"
awc = "3.0.1"
log = "0.4"

[dev-dependencies]
serde_json = "1.0.86"
